Korrektur von vl_08
Korrektur von vl_08

In alten Teilen \subset durch \subseteq ersetzt und an einer Stelle \lim\limits den fehlenden _ ergänzt

--- a/vl_5.tex
+++ b/vl_5.tex
@@ -15,7 +15,7 @@
 }\end{Satz}
 
 \begin{Satz}{\label{satz:satz_3}
-	Sei $ I \subset \mathbb{R}$ ein Intervall, $f: I \rightarrow \mathbb{R}$ 
+	Sei $ I \subseteq \mathbb{R}$ ein Intervall, $f: I \rightarrow \mathbb{R}$ 
 	differenzierbar in $x_0 \in I$. Dann ist f in $x_0$ stetig. \\
 	\textbf{Beweis:} \\
 		\noindent\hspace*{5mm}
@@ -41,7 +41,7 @@
 
 \begin{Satz}{
 	Seien $f,g : I \rightarrow \mathbb{R}$ in $x \in I$ differenzierbar, 
-	$ I \subset \mathbb{R}$ ein Intervall. Dann sind $f +g$, $f \cdot g$ und 
+	$ I \subseteq \mathbb{R}$ ein Intervall. Dann sind $f +g$, $f \cdot g$ und 
 	$\frac{f}{g}$ (sofern $g(x) \neq 0 $)  in $x$ differenzierbar. \\
 	Es gilt:
 	\begin{enumerate}
@@ -145,7 +145,7 @@ $p(x) = \sum_{l=0}^{n} a_l x^l$ gilt (Summenregel):
 	Seien $I_f$ und $I_g$ Intervalle, $x_0 \in I_f$ und 
 	$f : I_f \rightarrow \mathbb{R}$ in $x_0$ differenzierbar und 
 	$g: I_g \rightarrow \mathbb{R}$ sei in $f(x_0)$ differenzierbar und 
-	$f(I_f) \subset I_g$. Dann gilt:
+	$f(I_f) \subseteq I_g$. Dann gilt:
 	\begin{equation*}
 	\frac{d g \circ f}{dx}(x_0) = \frac{dg}{dx}(f(x_0)) \cdot \frac{df}{dx}(x_0)
 	\end{equation*}
@@ -180,7 +180,7 @@ $p(x) = \sum_{l=0}^{n} a_l x^l$ gilt (Summenregel):
 }\end{Satz}
 
 \begin{Definition}{
-	Ist $I \subset \mathbb{R}$ ein Intervall und 
+	Ist $I \subseteq \mathbb{R}$ ein Intervall und 
 	$f: I \rightarrow \mathbb{R}$ differenzierbar und $f':I \rightarrow \mathbb{R}$
 	stetig. Dann heißt f \textbf{stetig differenzierbar}. 
 	Wir definieren weiterhin induktiv die 
