Neue Vorlesung hinzugefügt
Vorlesung vom 15.05
Ohne Vergleich mit Mitschrift
Ohne Skizzen / Bilder

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -8,7 +8,8 @@
 \usepackage[standard]{ntheorem}                            % Theorem-Umgebung
 \usepackage{enumitem}
 \usepackage{tikz}
-
+\usepackage{extarrows}
+\usepackage{physics}
 
 \begin{document}
 \include{vl_04}
@@ -16,6 +17,7 @@
 \include{vl_06}
 \include{vl_07}
 \include{vl_08}
+\include{vl_09}
 
 \end{document}
  	
