--- a/vl_06.tex
+++ b/vl_06.tex
@@ -12,8 +12,8 @@
 }\end{Satz}
 
 \begin{Bemerkung}{
-	\textbf{ }\\
 	\begin{enumerate}
+		\item[ ]
 		\item Damit erhalten wir: 
 		\begin{equation*}
 			exp'\left(x\right) = \left( \sum_{l=0}^{\infty} \frac{x^l}{l!}\right)' 
@@ -105,8 +105,8 @@
 }\end{Proposition}
 
 \begin{Beispiel}{
-	\textbf{ }\\
 	\begin{itemize}
+		\item[]
 		\item k-te Wurtel $g: (0,\infty) \rightarrow \mathbb{R} : 
 		y \mapsto y^{\frac{1}{k}}$ ist differenzierbar mit 
 		$g'(y) = \frac{1}{k}y^{\frac{1}{k}-1}$
