--- a/vl_07.tex
+++ b/vl_07.tex
@@ -153,18 +153,21 @@
 }\end{Satz}
 
 \begin{Satz}[Regel von l'Hospital]{
-	Seien $f,g: (a,b) \rightarrow \mathbb{R}$ mit $-\infty \leq a < b \leq \infty$
+	Seien $f,g: (a,b) \rightarrow \mathbb{R}$ mit
+	\begin{align*}
+		-\infty \leq a < b \leq \infty
+	\end{align*}		
 	differenzierbar und $g'(x) \neq 0$ für alle $x \in (a,b)$. Weiter gelte:
 	\begin{align*}
 		\lim\limits_{x \rightarrow a}{\frac{f'(x)}{g'(x)} } = A
 	\end{align*}
 	Wobei  $ -\infty \leq A \leq \infty$ sei und 
-	$\lim\limits_{x \rightarrow a}{f(x) = 0} $ 
+	$\lim\limits_{x \rightarrow a}{f(x) = 0}$, \\ 
 	sowie 
 	$\lim\limits_{x \rightarrow a}{g(x) = 0} $
 	bzw. $\lim\limits_{x\rightarrow a}{g(x) = \pm \infty}$.\\
 	Dann gilt: $\lim\limits_{x \rightarrow a}{\frac{f(x)}{g(x)} = A}$.
-	Die analoge Aussage gilt auch für $x \rightarrow b$. \\
+	Die analoge Aussage gilt auch für $x \rightarrow b$.\\
 	\textbf{Bemerkung:}
 	\begin{itemize}
 		\item Wir verwenden hier den erweiterten Grenzwertbegriff, d.h. $\pm \infty$ 
