--- a/plot_MWS.tex
+++ b/plot_MWS.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 	\begin{tikzpicture}
 		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
