--- a/plot_integral_f.tex
+++ b/plot_integral_f.tex
@@ -13,4 +13,6 @@
        	\draw[black,thick](2.5,0) -- (2.5, 2.37);
        	\node at (4,1.5){$\int_a^b f$};
 	\end{tikzpicture}
+	\caption{Vorgehen}
+	\label{fig_int_vorgehen}
 \end{figure}
