Verweise auf Sätze angepasst

--- a/vl_09.tex
+++ b/vl_09.tex
@@ -148,7 +148,7 @@ Dabei heißt auf \glqq natürliche Weise\grqq{} insbesondere:
 	von $P_1$ und $P_2$
 }\end{Definition}
 
-\begin{Satz}{
+\begin{Satz}{\label{kap09_satz16}
 	Ist $P'$ eine Verfeinerung der Partition $P$ von $[a,b]$, dann gilt:
 	\begin{align*}
 		S (P,f) \geq & S (P',f) \\
@@ -178,7 +178,7 @@ Dabei heißt auf \glqq natürliche Weise\grqq{} insbesondere:
 	
 }\end{Satz}
 
-\begin{Satz}{
+\begin{Satz}{\label{kap09_satz17}
 	Sei $f: [a,b] \rightarrow \mathbb{R}$ beschränkt. Dann gilt:
 	\begin{align*}
 		\int_a^{\overline{b}} f \dd{x} \geq \int_{\underline{a}}^b f \dd{x}
