--- a/vl_08.tex
+++ b/vl_08.tex
@@ -39,9 +39,9 @@
 	\textbf{Bemerkung:} Offensichtlich gilt: 
 	$f(\alpha) = P_{n, \alpha} ( \alpha)$. Weiter gilt: 
 	\begin{align*}
-		f'(\alpha) = P_{n, \alpha}(\alpha) = \left( \sum_{l = 0}^n l 
+		f'(\alpha) = P'_{n, \alpha}(\alpha) = \left( \sum_{l = 0}^n l 
 		\cdot \frac{f^l (\alpha)}{l!} \left( x  - \alpha) ^{l-1} \right) \right)
-	\end{align*}
+	\end{align*}\todo{ich vermute, die Summe sollte bei 0 beginnen}
 	und analog: 
 	\begin{align*}
 		f^{(l)} (\alpha) = P_{n, \alpha}^{(l)} = P_{n, \alpha}^{(l)} (\alpha) \\
